# csv2bibtex

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
benches/: benchmark1-input1.csv  benchmark1-input2.csv  benchmark1.rs  tmp-benchmark1-output1.bib
src/: args.rs  bibwriter.rs  converter.rs  csvparser.rs  csvreader.rs  entry.rs  lib.rs  main.rs
tests/: test1-input1.csv  test1-output1.bib  test1-output2.bib  test1.rs  test2-input1.csv  test2-output1.bib  test2.rs  test3-input1.csv  test3-output1.bib  test3-verbatim-fields.rs
