[package]
name = "csv2bibtex"
version = "0.1.0"
authors = ["mutluler"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "^1.1"
serde = "^1"
biblatex = "^0.4"
regex = "^1.4"
clap = "^2.3"
anyhow = "^1.0"
simplelog = "^0.9"
log = "^0.4"
